<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/challengeFiveWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/chall5name"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFlag"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/border"
        android:hint="@string/enter_flag"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeFiveWelcome" />

    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/ok"
        android:id="@+id/buttonPinOKchall5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFlag"
        android:layout_marginTop="30dp"
        android:background="@drawable/shadowlayer"
        />

    <Button
        android:id="@+id/buttonSendbroadcast"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shadowlayer"
        android:text="@string/broadcast"
        app:layout_constraintBottom_toTopOf="@+id/buttonHintOnechall5"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHintOnechall5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shadowlayer"
        android:text="@string/hint_1"
        app:layout_constraintBottom_toTopOf="@+id/hint1Textchall5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint1Textchall5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chall5hint"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>