<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/challengeFourWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/chall4mainname"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chall4description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/chall4description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeFourWelcome" />

    <Button
        android:id="@+id/buttonHintOnechall4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/shadowlayer"
        android:text="@string/hint_1"
        app:layout_constraintBottom_toTopOf="@+id/hint1Textchall4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint1Textchall4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint1chall4"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonHintTwochall4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/buttonHintTwochall4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/shadowlayer"
        android:text="@string/hint_2"
        app:layout_constraintBottom_toTopOf="@+id/hint2Textchall4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
 />

    <TextView
        android:id="@+id/hint2Textchall4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint2chall4"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>