<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/challengeThreeWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/chall3"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chall3description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:text="@string/challthreedescription"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/challengeThreeWelcome" />

        <EditText
            android:id="@+id/editInputtext"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:hint="@string/input_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chall3description" />

        <Button
            android:id="@+id/buttonPinOKchall3"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/shadowlayer"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editInputtext"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/buttonHintOnechall3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shadowlayer"
            android:text="@string/hint_1"
            app:layout_constraintBottom_toTopOf="@+id/hint1Textchall3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hint1Textchall3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hint1chall3"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/buttonHintTwochall3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonHintTwochall3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadowlayer"
            android:text="@string/hint_2"
            app:layout_constraintBottom_toTopOf="@+id/hint2Textchall3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
 />

        <TextView
            android:id="@+id/hint2Textchall3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hint2chall3"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.062" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/webview" />
        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.2"
            android:layout_height="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>