<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/challOneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:background="@drawable/shadowlayer"
                android:drawableBottom="@drawable/ic_baseline_android_24"
                android:text="@string/buttonOne"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

            <Button
                android:id="@+id/challTwoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:background="@drawable/shadowlayer"
                android:drawableBottom="@drawable/ic_baseline_local_activity_24"
                android:text="@string/buttonTwo"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challOneButton" />

            <Button
                android:id="@+id/challThreeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:background="@drawable/shadowlayer"
                android:drawableBottom="@drawable/ic_baseline_sd_card_24"
                android:text="@string/buttonThree"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challTwoButton" />

            <Button
                android:id="@+id/challFourButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:background="@drawable/shadowlayer"
                android:drawableBottom="@drawable/ic_baseline_memory_24"
                android:text="@string/buttonFour"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challThreeButton" />

            <Button
                android:id="@+id/challFiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:background="@drawable/shadowlayer"
                android:drawableBottom="@drawable/ic_baseline_sms_24"
                android:text="@string/buttonFive"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challFourButton" />



            <TextView
                android:id="@+id/textlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/github"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challFiveButton"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>